# twentyone

./: .gitignore  README.md  default.nix  hie.yaml  shell.nix  twentyone.cabal
app/: Main.hs
nix/: ghc.nix  pkgs.nix
src/: Domain.hs  Game.hs  Parser.hs
test/: Test.hs
