cabal-version:      2.4
name:               twentyone
version:            0.1.0.0
license:
author:             Harald Gliebe
maintainer:         harald@glie.be
category:           Game
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    Domain
    Parser

  build-depends:
    , base        ^>=4.14.3.0
    , megaparsec

  hs-source-dirs:   src
  default-language: Haskell2010

executable twentyone
  main-is:          Main.hs
  build-depends:
    , base            ^>=4.14.3.0
    , random-shuffle
    , twentyone

  hs-source-dirs:   app
  default-language: Haskell2010

test-suite twentyone-test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Test.hs
  build-depends:
    , base       ^>=4.14.3.0
    , hspec      ^>=2.7.4
    , twentyone
